# cstring_view

./: CMakeLists.txt  README.md  sv.h
examples/: glob.c  has_file_extension.c  read_file.c  split.c  split_for_loop_and_tokenize.c  split_quote_str.c  split_while_loop_and_tokenize.c  trim_whitespace.c
tests/: sv_access.c  sv_begin_end.c  sv_create.c  sv_find.c  sv_find_first_of.c  sv_find_last_of.c  sv_is_empty.c  sv_parse_float.c  sv_parse_int.c  sv_parse_uint32.c  sv_parse_uint64.c  sv_parse_uint8.c  sv_read_file_stdin.c  sv_start_end_with.c  sv_substr.c  tmp.txt
